--- a/source/scss/animations/screen.scss
+++ b/source/scss/animations/screen.scss
@@ -4,4 +4,21 @@
     visibility: hidden;
     pointer-events: none;
   }
+
+  &--background {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $c-dark;
+    transform: scaleY(0);
+    transform-origin: 0 100%;
+    transition: transform 0.5s ease-in-out;
+
+    &--active {
+      transform: scaleY(1);
+    }
+  }
 }
