--- a/source/scss/animations/screen.scss
+++ b/source/scss/animations/screen.scss
@@ -1,24 +1,72 @@
 .screen {
-  &--hidden {
-    display: initial;
-    visibility: hidden;
-    pointer-events: none;
+  &--story {
+    &.screen--animationing {
+      display: block;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+    }
   }
 
-  &--background {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $c-dark;
-    transform: scaleY(0);
-    transform-origin: 0 100%;
-    transition: transform 0.5s ease-in-out;
+  &--prizes {
+    @keyframes screen--prizes--bg-slide-up {
+      0% {
+        transform: translateY(100%);
+      }
 
-    &--active {
-      transform: scaleY(1);
+      100% {
+        transform: translateY(0);
+      }
     }
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      transform: translateY(100%);
+      will-change: transform;
+      background-color: $c-dark;
+    }
+
+    &.screen--animationing {
+      display: block;
+      z-index: -1;
+
+      .screen__wrapper {
+        opacity: 0;
+      }
+
+      .screen__footer {
+        transform: translateY(100%);
+      }
+    }
+
+    &.active {
+      z-index: 1;
+
+      &::after {
+        animation: screen--prizes--bg-slide-up 0.7s ease-in-out forwards;
+      }
+
+      .screen__wrapper {
+        opacity: 1;
+        transition: opacity 0.7s ease-in 0.7s;
+      }
+
+      .screen__footer {
+        transform: translateY(0);
+        transition: transform 0.7s cubic-bezier(0.48, 0.83, 0.16, 0.92);
+      }
+    }
+  }
+
+  &--rules {
+    background-color: $c-dark;
   }
 }
